
  - bug #65571: Crop returns successfully when no output was made. Reported
    by Sepideh Eskandarlou.

  - bug #65561: Projections to infinity cause very long running time in
    Warp. Found and fixed by Giacomo Lorenzetti.

  - bug #63026: Warp translation adds one extra pixel even if it is not
    requested. Reported by Raul Infante-Sainz and fixed by Giacomo
    Lorenzetti.





* Noteworthy changes in release 0.22 (library 20.0.0) (2024-02-03)
** New publications
  - https://ui.adsabs.harvard.edu/abs/2023RNAAS...7..269E by Eskandarlou et
    al. on Gnuastro's zero point measurement script for calibration of
    astronomical images ('astscript-zeropoint').
  - https://ui.adsabs.harvard.edu/abs/2024RNAAS...8...10I by Infante-Sainz
    & Akhlaghi on Gnuastro's script to visualize the full dynamic range of
    astronomical images ('astscript-color-faint-gray').
  - https://ui.adsabs.harvard.edu/abs/2024RNAAS...8...22I by Infante-Sainz
    et al. on Gnuastro's script to measure the radial profile of a given
    source ('astscript-radial-profile').

** New features
*** New program
  - 'astscript-color-faint-gray': a new installed script to maximize the
    visualization of the contents within your astronomical images. It does
    this by showing the brighter parts of the image as color, intermediate
    regions as black and the noisy/faint regions as gray/white.

*** All programs
  - The following options are now available in all programs to allow
    customization of which metadata is printed in the 0-th HDU of the FITS
    output of all Gnuastro programs. Also see the "Changed features" list
    for an important change in this regard to all Gnuastro output FITS
    files.
    --outfitsnoconfig: do not print any metadata in the 0-th HDU (including
      the used options and their values, the date, the versions and git
      commit of running directory).
    --outfitsnodate: do not write the 'DATE' keyword.